@startuml
'https://plantuml.com/class-diagram

package "model" {
  interface ImageModelListener
  abstract class AbstractBlurrer
  class SimpleBlurrer
  class SingleThreadBlurrer
  class ImageModel
  ImageModel : HashMap<String, AbstractBlurrer> blurrers
  ImageModel : LinkedList<ImageModelListener> listeners
  ImageModel : runBlurrer(String blurrerName, int radius)
  AbstractBlurrer : {abstract} blur(int radius)
  AbstractBlurrer : ImageModel model
  ImageModelListener : {abstract} blurredImageChanged()

  SimpleBlurrer --|> AbstractBlurrer
  SingleThreadBlurrer --|> AbstractBlurrer
  ImageModel::HashMap --> AbstractBlurrer
  AbstractBlurrer::ImageModel --> ImageModel
  ImageModel::LinkedList --> ImageModelListener
}

package "control" {
  class BlurController
  BlurController : blur(String name, int radius)

  BlurController --> ImageModel
}

package "view" {
    class BlurMainFrame
    class BlurredPanel implements ImageModelListener
    class ControlsPanel

    ControlsPanel : JButton blurButton
    ControlsPanel : JSpinner radius
    ControlsPanel : JComboBox blurMethod

    BlurMainFrame --> BlurredPanel
    BlurMainFrame --> ControlsPanel
    ControlsPanel --> BlurController
    BlurredPanel --> ImageModel
    BlurredPanel : blurredImageChanged()

    note left of BlurredPanel::blurredImageChanged()
      repaint();
    end note
}


@enduml